[gd_scene load_steps=6 format=3 uid="uid://cr8yd8731jvp1"]

[ext_resource type="Texture2D" uid="uid://dqvm3fny5d8tq" path="res://assets/Map/Kaart.png" id="1_4xfga"]
[ext_resource type="Script" uid="uid://dhefrukkj8ir" path="res://Scripts/map.gd" id="1_gldc4"]
[ext_resource type="Texture2D" uid="uid://bdcpub6thuc41" path="res://assets/Map/Glaswald_text.png" id="3_0cso3"]
[ext_resource type="Script" uid="uid://oqqcs8cltkn8" path="res://Scripts/orginele_kaart.gd" id="3_2klcf"]
[ext_resource type="Texture2D" uid="uid://c1er751llo1jc" path="res://assets/Map/Glaswald_highlighted_kaart.png" id="4_2lpho"]

[node name="map" type="Node2D"]
script = ExtResource("1_gldc4")

[node name="Glaswald text" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_0cso3")

[node name="Glaswald highL" type="Sprite2D" parent="."]
visible = false
visibility_layer = 2
position = Vector2(576, 324)
scale = Vector2(4.5, 4.5)
texture = ExtResource("4_2lpho")

[node name="Orginele_kaart" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(4.5, 4.5)
texture = ExtResource("1_4xfga")
script = ExtResource("3_2klcf")

[node name="Glaswald" type="Button" parent="Orginele_kaart"]
show_behind_parent = true
offset_left = -85.0
offset_top = -40.0
offset_right = -69.0
offset_bottom = -29.0

[connection signal="mouse_entered" from="Orginele_kaart/Glaswald" to="." method="_on_glaswald_mouse_entered"]
[connection signal="mouse_exited" from="Orginele_kaart/Glaswald" to="." method="_on_glaswald_mouse_exited"]
[connection signal="pressed" from="Orginele_kaart/Glaswald" to="." method="_on_glaswald_pressed"]
